# MAGA_MIPFI

./: README.md
labyrinth_treasures/: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_treasures/labyrinth_treasures/: constants.py  main.py  player_actions.py  utils.py
primitive_db/: .gitignore  Makefile  README.md  pyproject.toml
primitive_db/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
valutatrade_hub_maxscore/: .gitignore  Makefile  README.md  main.py  pyproject.toml
valutatrade_hub_maxscore/data/: rates.json
valutatrade_hub_maxscore/valutatrade_hub/: __init__.py  decorators.py  logging_config.py
valutatrade_hub_maxscore/valutatrade_hub/cli/: interface.py
valutatrade_hub_maxscore/valutatrade_hub/core/: exceptions.py
valutatrade_hub_maxscore/valutatrade_hub/core/models/: portfolio.py  user.py  wallet.py
valutatrade_hub_maxscore/valutatrade_hub/core/usecases/: auth.py  rates.py  trading.py
valutatrade_hub_maxscore/valutatrade_hub/infra/: settings.py
valutatrade_hub_maxscore/valutatrade_hub/infra/services/: rate_cache.py  session.py
valutatrade_hub_maxscore/valutatrade_hub/infra/storage/: json_store.py  portfolios_repo.py  rates_repo.py  users_repo.py
valutatrade_hub_maxscore/valutatrade_hub/parser_service/: api_clients.py  config.py  storage.py  updater.py
