[tool.poetry]
name = "primitive-db"
version = "0.1.0"
description = "Primitive file-based database with CLI"
authors = ["<YOUR_NAME>"]
readme = "README.md"
packages = [{ include = "primitive_db" }]

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.47"
prettytable = "^3.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[tool.poetry.scripts]
project = "primitive_db.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
